--- a/AdmApp/AdmApp/Web.config
+++ b/AdmApp/AdmApp/Web.config
@@ -9,7 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="InmobiliariaContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=AdmApp1;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
+    <add name="InmobiliariaContext" connectionString="Data Source=SERVER\SQLEXPRESS;Initial Catalog=KOTDAT;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -78,11 +78,11 @@
     </assemblyBinding>
   </runtime>
   <entityFramework>
-    <contexts>
+    <!--contexts>
       <context type="AdmApp.DAL.InmobiliariaContext, AdmApp">
         <databaseInitializer type="AdmApp.DAL.InmobiliariaInitializer, AdmApp" />
       </context>
-    </contexts>
+    </contexts-->
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
         <parameter value="mssqllocaldb" />
