prueba de ultimos cambios

--- a/AdmApp/AdmApp/AdmApp.csproj
+++ b/AdmApp/AdmApp/AdmApp.csproj
@@ -1076,6 +1076,7 @@
     <Content Include="Views\Locadores\Edit.cshtml" />
     <Content Include="Views\Locadores\Index.cshtml" />
     <Content Include="Scripts\version.json" />
+    <Content Include="Views\Locadores\View.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
