--- a/AdmApp/AdmApp/Web.config
+++ b/AdmApp/AdmApp/Web.config
@@ -8,12 +8,12 @@
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
-  <!--connectionStrings>
-    <add name="InmobiliariaContext" connectionString="Data Source=SERVER\SQLEXPRESS;Initial Catalog=KOTDAT;Integrated Security=SSPI;/c" providerName="System.Data.SqlClient" />
-  </connectionStrings-->
   <connectionStrings>
-    <add name="InmobiliariaContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=AdmApp1;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
+    <add name="InmobiliariaContext" connectionString="Data Source=SERVER\SQLEXPRESS;Initial Catalog=KOTDAT;Integrated Security=SSPI;" providerName="System.Data.SqlClient" />
   </connectionStrings>
+  <!--connectionStrings>
+    <add name="InmobiliariaContext" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;Initial Catalog=AdmApp1;Integrated Security=True;Connect Timeout=15;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient"/>
+  </connectionStrings-->
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
     <add key="webpages:Enabled" value="false" />
@@ -83,7 +83,7 @@
   <entityFramework>
     <contexts>
       <context type="AdmApp.DAL.InmobiliariaContext, AdmApp">
-        <databaseInitializer type="AdmApp.DAL.InmobiliariaInitializer, AdmApp" />
+        <!--databaseInitializer type="AdmApp.DAL.InmobiliariaInitializer, AdmApp" /-->
       </context>
     </contexts>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
