--- a/AdmApp/AdmApp/AdmApp.csproj
+++ b/AdmApp/AdmApp/AdmApp.csproj
@@ -220,6 +220,10 @@
     <Compile Include="Migrations\201701202038109_Initial.Designer.cs">
       <DependentUpon>201701202038109_Initial.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201701202138439_170120.cs" />
+    <Compile Include="Migrations\201701202138439_170120.Designer.cs">
+      <DependentUpon>201701202138439_170120.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Inquilino.cs" />
@@ -1120,6 +1124,9 @@
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201701202038109_Initial.resx">
       <DependentUpon>201701202038109_Initial.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201701202138439_170120.resx">
+      <DependentUpon>201701202138439_170120.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
