--- a/AdmApp/AdmApp/Views/Web.config
+++ b/AdmApp/AdmApp/Views/Web.config
@@ -34,6 +34,7 @@
   </system.webServer>
 
   <system.web>
+    <globalization uiCulture="es" culture="es-MX" />
     <compilation>
       <assemblies>
         <add assembly="System.Web.Mvc, Version=5.2.3.0, Culture=neutral, PublicKeyToken=31BF3856AD364E35" />
