--- a/AdmApp/AdmApp/AdmApp.csproj
+++ b/AdmApp/AdmApp/AdmApp.csproj
@@ -230,6 +230,10 @@
     <Compile Include="Migrations\201702062356360_20170206b.Designer.cs">
       <DependentUpon>201702062356360_20170206b.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702141830093_20170214.cs" />
+    <Compile Include="Migrations\201702141830093_20170214.Designer.cs">
+      <DependentUpon>201702141830093_20170214.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Contrato.cs" />
@@ -1154,6 +1158,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702062356360_20170206b.resx">
       <DependentUpon>201702062356360_20170206b.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702141830093_20170214.resx">
+      <DependentUpon>201702141830093_20170214.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
