cambios en los dropdown para mostrar nombres en vez de id.

--- a/AdmApp/AdmApp/AdmApp.csproj
+++ b/AdmApp/AdmApp/AdmApp.csproj
@@ -234,6 +234,10 @@
     <Compile Include="Migrations\201702141830093_20170214.Designer.cs">
       <DependentUpon>201702141830093_20170214.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201702152101212_20170215.cs" />
+    <Compile Include="Migrations\201702152101212_20170215.Designer.cs">
+      <DependentUpon>201702152101212_20170215.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Contrato.cs" />
@@ -1161,6 +1165,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201702141830093_20170214.resx">
       <DependentUpon>201702141830093_20170214.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201702152101212_20170215.resx">
+      <DependentUpon>201702152101212_20170215.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
