--- a/AdmApp/AdmApp/AdmApp.csproj
+++ b/AdmApp/AdmApp/AdmApp.csproj
@@ -242,8 +242,13 @@
     <Compile Include="Migrations\201703012007339_170301.Designer.cs">
       <DependentUpon>201703012007339_170301.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201703012229131_170301b.cs" />
+    <Compile Include="Migrations\201703012229131_170301b.Designer.cs">
+      <DependentUpon>201703012229131_170301b.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Contacto.cs" />
     <Compile Include="Models\Contrato.cs" />
     <Compile Include="Models\Pendiente.cs" />
     <Compile Include="Models\Inquilino.cs" />
@@ -1175,6 +1180,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703012007339_170301.resx">
       <DependentUpon>201703012007339_170301.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703012229131_170301b.resx">
+      <DependentUpon>201703012229131_170301b.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
