--- a/AdmApp/AdmApp/AdmApp.csproj
+++ b/AdmApp/AdmApp/AdmApp.csproj
@@ -206,6 +206,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ContactoController.cs" />
     <Compile Include="Controllers\ContratoController.cs" />
     <Compile Include="Controllers\InquilinoController.cs" />
     <Compile Include="Controllers\LocadoresController.cs" />
@@ -245,6 +246,14 @@
     <Compile Include="Migrations\201703012229131_170301b.cs" />
     <Compile Include="Migrations\201703012229131_170301b.Designer.cs">
       <DependentUpon>201703012229131_170301b.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703152028189_20170315.cs" />
+    <Compile Include="Migrations\201703152028189_20170315.Designer.cs">
+      <DependentUpon>201703152028189_20170315.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201703152155077_20170315b.cs" />
+    <Compile Include="Migrations\201703152155077_20170315b.Designer.cs">
+      <DependentUpon>201703152155077_20170315b.cs</DependentUpon>
     </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
@@ -1139,6 +1148,11 @@
     <Content Include="Views\Contrato\Details.cshtml" />
     <Content Include="Views\Contrato\Edit.cshtml" />
     <Content Include="Views\Contrato\Index.cshtml" />
+    <Content Include="Views\Contacto\Create.cshtml" />
+    <Content Include="Views\Contacto\Delete.cshtml" />
+    <Content Include="Views\Contacto\Details.cshtml" />
+    <Content Include="Views\Contacto\Edit.cshtml" />
+    <Content Include="Views\Contacto\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -1183,6 +1197,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201703012229131_170301b.resx">
       <DependentUpon>201703012229131_170301b.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703152028189_20170315.resx">
+      <DependentUpon>201703152028189_20170315.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201703152155077_20170315b.resx">
+      <DependentUpon>201703152155077_20170315b.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
